--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.3"
-  }
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.3"
+  },
+
+
 }
